# archive-indexer

./: .gitignore  README  TODO  pyproject.toml
src/arindexer/: __init__.py  _archive.py  _processor.py  cli.py
tests/: test_archive.py  test_processor.py
